Add Criterion-based benchmarking
Gives parametrisation over different inputs, statistical confidence,
comparisons between changes, and, most importantly - nice graphs :)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,13 @@ name = "delaunator"
 version = "0.1.0"
 authors = ["Vladimir Agafonkin <agafonkin@gmail.com>"]
 
-[dependencies]
+[dev-dependencies]
+criterion = "0.2.5"
 rand = "0.5.5"
+
+[lib]
+bench = false
+
+[[bench]]
+name = "bench"
+harness = false
