--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ authors = ["Vladimir Agafonkin <agafonkin@gmail.com>"]
 [dev-dependencies]
 criterion = "0.2.5"
 rand = "0.5.5"
+serde_json = "1.0.27"
 
 [lib]
 bench = false
