--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ categories = ["algorithms", "data-structures"]
 keywords = ["delaunay", "triangulation", "tessellation", "spatial", "geometry"]
 authors = ["Vladimir Agafonkin <agafonkin@gmail.com>"]
 
+[dependencies]
+asprim = "0.1.1"
+num-traits = "0.2.6"
+
 [dev-dependencies]
 criterion = "0.2.5"
 rand = "0.5.5"
