--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,18 @@ categories = ["algorithms", "data-structures"]
 keywords = ["delaunay", "triangulation", "tessellation", "spatial", "geometry"]
 authors = ["Vladimir Agafonkin <agafonkin@gmail.com>"]
 
+[dependencies]
+cfg-if = "1"
+micromath = "2"
+
 [dev-dependencies]
 criterion = "0.3.4"
 rand = "0.8.3"
 serde_json = "1.0.64"
+
+[features]
+default = ["std"]
+std = []
 
 [lib]
 bench = false
