Robust checks for orientation (#19)
* Robust orient2d checks

* Add example to display triangulation in SVG

* Clean up svg.rs example

* Split fixture tests into separate test cases

* Add test case for #10

* Copy remaining robustness tests from js repo

* Add point label to svg example to easy investigations

* Add grid test fixture

* Add hull convex check to tests

Based on https://github.com/mapbox/delaunator/pull/51
Along with the last missing test case "issue44".

* Remove invalid test code for connectivity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ categories = ["algorithms", "data-structures"]
 keywords = ["delaunay", "triangulation", "tessellation", "spatial", "geometry"]
 authors = ["Vladimir Agafonkin <agafonkin@gmail.com>"]
 
+[dependencies]
+robust = "0.2.3"
+
 [dev-dependencies]
 criterion = "0.3.4"
 rand = "0.8.3"
@@ -26,3 +29,11 @@ bench = false
 [[bench]]
 name = "bench"
 harness = false
+
+[[example]]
+name = "triangulate"
+path = "examples/triangulate.rs"
+
+[[example]]
+name = "svg"
+path = "examples/svg.rs"
